[gd_scene load_steps=2 format=3 uid="uid://narjql61bmk7"]

[ext_resource type="Script" uid="uid://dt0xpkqp03qec" path="res://main_menu/main_menu.gd" id="1_oa53l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oa53l")

[node name="first" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="start" type="Button" parent="first"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 221
text = "start"

[node name="join" type="Button" parent="first"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 221
text = "join"

[node name="start" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="start"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 64
text = "aaaaa"
horizontal_alignment = 1

[node name="copy" type="Button" parent="start"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "copy"

[node name="start_game" type="Button" parent="start"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "start"

[node name="join" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextEdit" type="TextEdit" parent="join"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
placeholder_text = "add the ip and port"

[node name="paste" type="Button" parent="join"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "paste"

[node name="join_game" type="Button" parent="join"]
custom_minimum_size = Vector2(0, 132)
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "join"

[connection signal="pressed" from="first/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="first/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="start/copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="start/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="join/paste" to="." method="_on_paste_pressed"]
[connection signal="pressed" from="join/join_game" to="." method="_on_join_game_pressed"]
